# AVIAHACKATHON2025

./: .gitignore  LICENSE  README.md  parsers_product.py  psb_products_updated.json  s3_script.py  server.py
app/: main.py  routers.py
data/prompts/: profile.md
data/support/: mapping.json  region.json  socdem_cluster.json
notebooks/: feature_engineering_psb.ipynb  model.ipynb  psb_recommendation_analysis.ipynb  user_clustering_psb (1).ipynb  user_clustering_psb.ipynb  user_clustering_psb_(2) (1).ipynb  user_profile_analysis.ipynb
recsys/: pyproject.toml
recsys/src/recsys/: __init__.py
recsys/src/recsys/models/: __init__.py  baseline.py  data_pipeline.py
recsys/src/recsys/scripts/: __init__.py  stream_tecd.py
static/: index.html  profile.html
web/: requirements.txt
web/app/: database.py  services.py
web/static/: index.html  mobile_mockup.html  profile.html
